[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Andale Mono.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://StartGameMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[node name="StartGameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 96.0
margin_top = 564.0
margin_right = 624.0
margin_bottom = 716.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 528.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
text = "Payasito de Equilibrio"

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 528.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="SoundOnOff" type="CheckButton" parent="CenterContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 528.0
margin_bottom = 152.0
text = "Sound"
[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/SoundOnOff" to="." method="_on_SoundOnOff_toggled"]
